Network/Infra/Traefik/templates/LegacyNextCloud.yaml
kind: Service
apiVersion: v1
metadata:
  name: legacy-nextcloud
spec:
  type: ExternalName
  externalName: infra1-dc1-kjdev-nextcloud-custom-app-ix-kjdev-nextcloud.service.dc1.kjdev
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
      appProtocol: http
