Network/Infra/Traefik/templates/UDPWeb.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    metallb.universe.tf/allow-shared-ip: istio
  name: https-udp-gateway
  namespace: core-prod
spec:
  allocateLoadBalancerNodePorts: false
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  loadBalancerIP: 10.1.1.83
  ports:
    - name: udp-443
      port: 443
      protocol: UDP
      appProtocol: https
      targetPort: 443

    - name: udp-67
      port: 67
      protocol: UDP
      appProtocol: bootps
      targetPort: dhcp
  selector:
    app.kubernetes.io/instance: traefik-core
    app.kubernetes.io/name: traefik
  sessionAffinity: None
  type: LoadBalancer
  externalIPs:
    - 66.165.222.101
