Network/Infra/Traefik/templates/Gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: traefik-gateway
spec:
  selector:
    istio: ingress # use istio default ingress gateway
  servers:
    - port:
        number: 443
        name: core-https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: myloginspace-int-default-certificates
      hosts:
        - authenticate.int.mylogin.space

    - port:
        number: 443
        name: https-mylogin
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: myloginspace-default-certificates
      hosts:
        - s3.mylogin.space
        - metrics.mylogin.space
        - logs.mylogin.space
        - traces.mylogin.space

    - port:
        number: 443
        name: https-tcp
        protocol: TLS
      tls:
        mode: PASSTHROUGH
      hosts:
        - controlcenter.house
        - accessmyporn.download
        - '*.controlcenter.house'
        - resolvemy.host
        - 'ytdl.kjmedia.stream'
        - 'feeds.kjmedia.stream'
        - 'sonarr.kjmedia.stream'
        - 'radarr.kjmedia.stream'
        - 'prowlarr.kjmedia.stream'
        - '*.writemy.codes'
        - '*.mylogin.space'
        - '*.ipaddr.network'
        - 'bitwarden.kristianjones.dev'
        - '*.gitpods.writemy.codes'
        - '*.ws.gitpods.writemy.codes'

    - port:
        number: 80
        name: http-main
        protocol: HTTP
      hosts:
        - static.mylogin.space
        - 10.1.1.83

    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - controlcenter.house
        - accessmyporn.download
        - '*.controlcenter.house'
        - resolvemy.host
        - 'ytdl.kjmedia.stream'
        - 'feeds.kjmedia.stream'
        - '*.writemy.codes'
        - '*.ipaddr.network'
        - 'bitwarden.kristianjones.dev'
        - '*.gitpods.writemy.codes'
        - '*.ws.gitpods.writemy.codes'
      tls:
        httpsRedirect: true

    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: kjmediastream-default-certificates
      hosts:
        - 'jellyfin.kjmedia.stream'

    - hosts:
        - unifi.ipaddr.network
        - '10.1.1.83'
      port:
        number: 8080
        name: http-alt
        protocol: HTTP
