Network/Infra/Traefik/templates/MySQLGateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: mysql-gateway
spec:
  selector:
    istio: ingress # use istio default ingress gateway
  servers:
    - hosts:
        - '*'
      port:
        number: 3306
        name: mysql
        protocol: TCP
