Network/Infra/Traefik/templates/RedisGateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: redis-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - '*'
      port:
        number: 6379
        name: redis
        protocol: redis
