Network/Infra/Traefik/templates/JellyFinService.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kjmedia-jellyfin-ingress-service
spec:
  hosts:
    - 'jellyfin.kjmedia.stream'
  gateways:
    - traefik-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            port:
              number: 8096
            host: jellyfin-core.lab-prod.svc.cluster.local
