Network/Infra/Traefik/templates/KJMediaService.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kjmedia-ingress-service
spec:
  hosts:
    - '*.kjmedia.stream'
  gateways:
    - kjmedia-gateway
  http:
  - match:
    - uri:
        prefix: /status
    - uri:
        prefix: /delay
    route:
    - destination:
        port:
          number: 8000
        host: httpbin
