Network/Infra/Traefik/templates/MySQLService.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: mysql
spec:
  hosts:
    - '*'
  gateways:
    - mysql-gateway
  tcp:
    - match:
        - port: 3306
      route:
        - destination:
            host: core-kjdev-vtgate-2cf17ded
            port:
              number: 3306
          weight: 100
