Network/Infra/Traefik/templates/MySQLVirtualService.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: mysql
spec:
  hosts:
    - mysql.mylogin.space
  gateways:
    - traefik-gateway
  tls:
    - match:
        - port: 443
          sniHosts:
            - mysql.mylogin.space
      route:
        - destination:
            host: core-kjdev-vtgate-2cf17ded
            port:
              number: 3306
          weight: 100
