Network/Infra/Traefik/templates/RedisService.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: redis-proxy
spec:
  hosts:
    - '*'
  gateways:
    - redis-gateway
  tcp:
    - match:
        - port: 6379
      route:
        - destination:
            host: infra1-redis
            port:
              number: 6379
          weight: 40

        - destination:
            host: keydb-core-headless
            port:
              number: 6379
          weight: 60
