Network/Infra/Traefik/templates/SpeedTestServiceEntry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: external-svc-librespeed
spec:
  hosts:
    - speed.kjmedia.stream
  location: MESH_EXTERNAL
  ports:
    - number: 80
      name: http
      protocol: HTTP
      targetPort: 80
  resolution: DNS
  endpoints:
    - address: infra1-dc1-business-testing-librespeed.core-prod.svc.cluster.local
      ports:
        http: 80
