Network/Infra/Traefik/templates/Static.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: static-service
spec:
  hosts:
    - static.mylogin.space
    - 10.1.1.83
  gateways:
    - traefik-gateway
  http:
    - route:
        - destination:
            port:
              number: 80
            host: traefik-core-s3-proxy
