Network/Infra/Traefik/templates/UnifiService.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: unifi-service
spec:
  hosts:
    - unifi.ipaddr.network
    - '10.1.1.83'
  gateways:
    - traefik-gateway
  http:
    - match:
        - uri:
            prefix: /inform
      route:
        - destination:
            port:
              number: 8080
            host: unifi-ingress
