Network/Infra/Traefik/templates/VirtualService.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: traefik
spec:
  hosts:
    - accessmyporn.download
    - resolvemy.host
    - controlcenter.house
    - '*.controlcenter.house'
    - '*.mylogin.space'
    - '*.writemy.codes'
    - '*.ipaddr.network'
    - 'ytdl.kjmedia.stream'
    - '*.kristianjones.dev'
  gateways:
    - traefik-gateway
  tls:
    - match:
        - port: 443
          sniHosts:
            - mysql.mylogin.space
      route:
        - destination:
            host: core-kjdev-vtgate-2cf17ded
            port:
              number: 3306
          weight: 100

    - match:
        - port: 443
          sniHosts:
            - accessmyporn.download
            - resolvemy.host
            - controlcenter.house
            - '*.controlcenter.house'
            - '*.mylogin.space'
            - '*.int.mylogin.space'
            - '*.writemy.codes'
            - '*.ipaddr.network'
            - '*.kristianjones.dev'
            - ytdl.kjmedia.stream
      route:
        - destination:
            host: traefik-core
            port:
              number: 443
          weight: 100
