Network/Infra/Traefik/templates/YTDLService.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kjmedia-ytdl-ingress-service
spec:
  hosts:
    - 'ytdl.kjmedia.stream'
  gateways:
    - kjmedia-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            port:
              number: 17442
            host: ytdl-core-youtubedl-material.lab-prod.svc.cluster.local
